<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">吱道</string>
    <string name="home_msg">通知</string>
    <string name="home_my">我的</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="login_regist">注册账号</string>
    <string name="login_rpwd">忘记密码?</string>
    <string name="login_otherlogin">其他登陆方式</string>
    <string name="cancel">取消</string>
    <string name="edit_pwd">修改密码</string>
    <string name="edit_pwd_by_email">获取验证码</string>
    <string name="find_pwd_title">忘记密码</string>
    <string name="login_by_other">其他方式登录</string>
    <string name="message_attention">关注</string>
    <string name="message_detail_title">消息详情</string>
    <string name="message_publish">发布</string>
    <string name="message_search_title">消息查询</string>
    <string name="mine_fragment_alarm">相册中选取</string>
    <string name="mine_fragment_capture">拍照</string>
    <string name="mine_fragment_nickname">昵称</string>
    <string name="mine_fragment_setting">设置</string>
    <string name="register_email_hint">请输入邮箱</string>
    <string name="register_code">请输入验证码</string>
    <string name="register_getcode">获取验证码</string>
    <string name="register_title">注册</string>
    <string name="register_haveusername_login">已有账号,直接登录</string>
    <string name="search_menu_title">Search</string>
    <string name="send_message_end_time">结束时间:</string>
    <string name="send_message_hint">请输入主题内容...</string>
    <string name="send_message_position">地点:</string>
    <string name="send_message_start_time">开始时间:</string>
    <string name="send_message_Title">标题:</string>
    <string name="send_message_title">发布主题</string>
    <string name="send_message_tag">标签</string>
    <string name="send_message_addtag">添加标签</string>
    <string name="send_message_map_point">地图上选点</string>
    <string name="server_connect_error">网络断开，请检查网络设置</string>
    <string name="server_timeout_error">网络超时，请检查网络设置</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_more">更多设置</string>
    <string name="setting_sound">声音与提醒</string>
    <string name="setting_title">设置</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="submit">确定</string>
    <string name="nomsg">暂无通知~</string>
    <string name="noempty">暂无主题~</string>
    <string name="list_english">英语考试</string>
    <string name="list_time">10月01日 00：00</string>
    <string name="pop_add_lable">添加一个标签</string>
</resources>