<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    n1:layout_width="fill_parent"
    n1:layout_height="fill_parent"
    xmlns:n1="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_title"
        n1:layout_alignParentTop="true"
        n1:layout_alignParentRight="true"
        n1:layout_width="match_parent"
        n1:layout_height="wrap_content"
        n1:id="@+id/include"/>

    <ImageView xmlns:n2="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/register_avatar"
        n1:layout_width="@dimen/dp_60"
        n1:layout_height="@dimen/dp_60"
        n1:layout_marginTop="@dimen/dp_20"
        n1:src="@drawable/logo"
        n2:layout_constraintLeft_toLeftOf="parent"
        n2:layout_constraintRight_toRightOf="parent"
        n2:layout_constraintTop_toBottomOf="@id/include" />

    <EditText xmlns:n3="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/register_username"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/dp_40"
        n1:layout_marginLeft="@dimen/dp_20"
        n1:layout_marginRight="@dimen/dp_20"
        n1:layout_marginTop="@dimen/dp_20"
        n1:background="@drawable/et_stroke_shape"
        n1:hint="@string/login_username"
        n1:paddingLeft="@dimen/dp_10"
        n1:textSize="@dimen/sp_14"
        n3:layout_constraintLeft_toLeftOf="parent"
        n3:layout_constraintRight_toRightOf="parent"
        n3:layout_constraintTop_toBottomOf="@id/register_avatar" />

    <EditText xmlns:n4="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/register_password"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/dp_40"
        n1:layout_marginLeft="@dimen/dp_20"
        n1:layout_marginRight="@dimen/dp_20"
        n1:layout_marginTop="@dimen/dp_20"
        n1:background="@drawable/et_stroke_shape"
        n1:hint="@string/login_pwd"
        n1:inputType="textPassword"
        n1:paddingLeft="@dimen/dp_10"
        n1:textSize="@dimen/sp_14"
        n4:layout_constraintLeft_toLeftOf="parent"
        n4:layout_constraintRight_toRightOf="parent"
        n4:layout_constraintTop_toBottomOf="@id/register_username" />

    <EditText xmlns:n5="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/register_email"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/dp_40"
        n1:layout_marginLeft="@dimen/dp_20"
        n1:layout_marginRight="@dimen/dp_20"
        n1:layout_marginTop="@dimen/dp_20"
        n1:background="@drawable/et_stroke_shape"
        n1:hint="@string/register_email_hint"
        n1:inputType="textPassword"
        n1:paddingLeft="@dimen/dp_10"
        n1:textSize="@dimen/sp_14"
        n5:layout_constraintLeft_toLeftOf="parent"
        n5:layout_constraintRight_toRightOf="parent"
        n5:layout_constraintTop_toBottomOf="@id/register_password" />

    <EditText xmlns:n6="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/register_getCode"
        n1:layout_width="@dimen/dp_200"
        n1:layout_height="@dimen/dp_40"
        n1:layout_marginLeft="@dimen/dp_20"
        n1:layout_marginTop="@dimen/dp_20"
        n1:background="@drawable/et_stroke_shape"
        n1:hint="@string/register_code"
        n1:inputType="textEmailAddress"
        n1:paddingLeft="@dimen/dp_10"
        n1:textSize="@dimen/sp_14"
        n6:layout_constraintLeft_toLeftOf="parent"
        n6:layout_constraintTop_toBottomOf="@id/register_email" />

    <TextView xmlns:n8="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/register_setcode"
        n1:layout_width="wrap_content"
        n1:layout_height="wrap_content"
        n1:layout_marginTop="@dimen/dp_30"
        n1:text="@string/register_getcode"
        n1:textSize="@dimen/sp_18"
        n8:layout_constraintEnd_toEndOf="parent"
        n8:layout_constraintLeft_toRightOf="@id/register_getCode"
        n8:layout_constraintTop_toBottomOf="@id/register_email" />

    <Button xmlns:n7="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/register_btn"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/dp_35"
        n1:layout_marginLeft="@dimen/dp_20"
        n1:layout_marginRight="@dimen/dp_20"
        n1:layout_marginTop="@dimen/dp_20"
        n1:background="@drawable/btn_blue_shape"
        n1:text="@string/register_title"
        n1:textColor="@color/white"
        n1:textSize="@dimen/sp_14"
        n7:layout_constraintLeft_toLeftOf="parent"
        n7:layout_constraintRight_toRightOf="parent"
        n7:layout_constraintTop_toBottomOf="@id/register_getCode" />

    <TextView xmlns:n8="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/register_login"
        n1:layout_width="@dimen/dp_0"
        n1:layout_height="wrap_content"
        n1:layout_marginRight="@dimen/dp_8"
        n1:layout_marginTop="@dimen/dp_15"
        n1:text="@string/register_haveusername_login"
        n1:textColor="@color/gray1"
        n1:textSize="@dimen/sp_14"
        n8:layout_constraintEnd_toEndOf="@id/register_btn"
        n8:layout_constraintTop_toBottomOf="@id/register_btn" />

</android.support.constraint.ConstraintLayout>