<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:background="#86000000" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <FrameLayout n1:id="@+id/fl_tag" n1:layout_width="fill_parent" n1:layout_height="0.0dip" n1:layout_weight="1.0" />
    <LinearLayout n1:layout_gravity="bottom" n1:orientation="vertical" n1:background="@color/white" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
        <TextView n1:textSize="16dip" n1:gravity="center" n1:id="@+id/tv_capture" n1:padding="10.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/mine_fragment_capture" />
        <View n1:id="@+id/view_line" n1:background="@color/gray0" n1:layout_width="fill_parent" n1:layout_height="1.0dip" n2:layout_constraintTop_toBottomOf="@id/tv_capture" xmlns:n2="http://schemas.android.com/apk/res-auto" />
        <TextView n1:textSize="16dip" n1:gravity="center" n1:id="@+id/tv_alarm" n1:padding="10.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/mine_fragment_alarm" n3:layout_constraintTop_toBottomOf="@id/view_line" xmlns:n3="http://schemas.android.com/apk/res-auto" />
        <View n1:id="@+id/view_gray" n1:background="@color/gray1" n1:layout_width="fill_parent" n1:layout_height="10.0dip" n4:layout_constraintTop_toBottomOf="@id/tv_alarm" xmlns:n4="http://schemas.android.com/apk/res-auto" />
        <TextView n1:textSize="16dip" n1:gravity="center" n1:id="@+id/tv_cancel" n1:paddingTop="15.0dip" n1:paddingBottom="15.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/cancel" n5:layout_constraintTop_toBottomOf="@id/view_gray" xmlns:n5="http://schemas.android.com/apk/res-auto" />
    </LinearLayout>
</LinearLayout>