<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout n1:background="@color/gray0" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:gravity="center_vertical" n1:orientation="horizontal" n1:id="@+id/ll_info" n1:background="@color/white" n1:paddingLeft="15.0dip" n1:paddingTop="10.0dip" n1:paddingBottom="10.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
        <ImageView n1:id="@+id/civ_avatar" n1:layout_width="40.0dip" n1:layout_height="40.0dip" n1:src="@drawable/logo"  />
        <TextView n1:textSize="16dip" n1:ellipsize="end" n1:id="@+id/tv_nickname" n1:paddingLeft="10.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="吱道" n1:singleLine="true" />
    </LinearLayout>
    <TextView n1:textSize="14dip" n1:gravity="center" n1:id="@+id/tv_sound" n1:background="@color/white" n1:padding="10.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="20.0dip" n1:text="@string/setting_sound" n3:layout_constraintTop_toBottomOf="@id/ll_info" xmlns:n3="http://schemas.android.com/apk/res-auto" />
    <TextView n1:textSize="14dip" n1:gravity="center" n1:id="@+id/tv_more_settings" n1:background="@color/white" n1:padding="10.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="1.0dip" n1:text="@string/setting_more" n4:layout_constraintTop_toBottomOf="@id/tv_sound" xmlns:n4="http://schemas.android.com/apk/res-auto" />
    <Button n1:textSize="14dip" n1:gravity="center" n1:id="@+id/btn_logout" n1:background="@drawable/shape_white_bg" n1:padding="10.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_margin="15.0dip" n1:layout_marginBottom="20.0dip" n1:text="@string/setting_logout" n5:layout_constraintBottom_toBottomOf="parent" xmlns:n5="http://schemas.android.com/apk/res-auto" />
</android.support.constraint.ConstraintLayout>