<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    n1:layout_width="fill_parent"
    n1:layout_height="fill_parent"
    xmlns:n1="http://schemas.android.com/apk/res/android">

    <LinearLayout
        n1:gravity="center"
        n1:layout_gravity="center"
        n1:orientation="vertical"
        n1:background="@drawable/main_message_et_bg"
        n1:layout_width="@dimen/dp_240"
        n1:layout_height="@dimen/dp_160">

        <TextView
            n1:textSize="@dimen/sp_16"
            n1:layout_width="wrap_content"
            n1:layout_height="wrap_content"
            n1:text="@string/pop_add_lable" />

        <EditText
            n1:textSize="@dimen/sp_14"
            n1:id="@+id/et_label"
            n1:background="@drawable/shape_white_stroke_bg"
            n1:paddingLeft="@dimen/dp_10"
            n1:layout_width="fill_parent"
            n1:layout_height="@dimen/dp_35"
            n1:layout_marginLeft="@dimen/dp_30"
            n1:layout_marginTop="@dimen/dp_10"
            n1:layout_marginRight="@dimen/dp_30" />

        <LinearLayout
            n1:layout_width="wrap_content"
            n1:layout_height="wrap_content"
            n1:layout_marginTop="@dimen/dp_10">

            <Button
                n1:textSize="@dimen/sp_14"
                n1:textColor="@color/white"
                n1:id="@+id/btn_cancel_pop"
                n1:background="@drawable/btn_blue_shape"
                n1:layout_width="@dimen/dp_80"
                n1:layout_height="@dimen/dp_40"
                n1:layout_marginRight="@dimen/dp_20"
                n1:text="@string/cancel" />

            <Button
                n1:textSize="@dimen/dp_14"
                n1:textColor="@color/white"
                n1:id="@+id/btn_submit_pop"
                n1:background="@drawable/btn_blue_shape"
                n1:layout_width="@dimen/dp_80"
                n1:layout_height="@dimen/dp_40"
                n1:text="@string/submit" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>