<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    n1:layout_width="fill_parent"
    n1:layout_height="fill_parent"
    xmlns:n1="http://schemas.android.com/apk/res/android">

    <include layout="@layout/common_title"
        n1:layout_alignParentTop="true"
        n1:layout_width="match_parent"
        n1:layout_height="wrap_content"
        n1:id="@+id/include"/>

    <ImageView
        n1:id="@+id/updatepsd_pictureUser"
        n1:layout_width="@dimen/dp_80"
        n1:layout_height="@dimen/dp_80"
        n1:layout_marginTop="@dimen/dp_20"
        n1:src="@drawable/logo"
        n2:layout_constraintLeft_toLeftOf="parent"
        n2:layout_constraintRight_toRightOf="parent"
        n2:layout_constraintTop_toBottomOf="@id/include"
        xmlns:n2="http://schemas.android.com/apk/res-auto" />

    <EditText n1:textSize="@dimen/sp_14"
        n1:id="@+id/login_username"
        n1:background="@drawable/et_stroke_shape"
        n1:paddingLeft="@dimen/dp_10"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/dp_40"
        n1:layout_marginLeft="@dimen/dp_20"
        n1:layout_marginTop="@dimen/dp_30"
        n1:layout_marginRight="@dimen/dp_20"
        n1:hint="@string/login_username"
        n3:layout_constraintLeft_toLeftOf="parent"
        n3:layout_constraintRight_toRightOf="parent"
        n3:layout_constraintTop_toBottomOf="@id/updatepsd_pictureUser"
        xmlns:n3="http://schemas.android.com/apk/res-auto" />

    <EditText
        n1:textSize="@dimen/sp_14"
        n1:id="@+id/login_password"
        n1:background="@drawable/et_stroke_shape"
        n1:paddingLeft="@dimen/dp_10"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/dp_40"
        n1:layout_marginLeft="@dimen/dp_20"
        n1:layout_marginTop="@dimen/dp_30"
        n1:layout_marginRight="@dimen/dp_20"
        n1:hint="@string/login_pwd"
        n1:inputType="textPassword"
        n4:layout_constraintLeft_toLeftOf="parent"
        n4:layout_constraintRight_toRightOf="parent"
        n4:layout_constraintTop_toBottomOf="@id/login_username"
        xmlns:n4="http://schemas.android.com/apk/res-auto" />

    <Button xmlns:n5="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/login_login"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/dp_35"
        n1:layout_marginLeft="@dimen/dp_20"
        n1:layout_marginRight="@dimen/dp_20"
        n1:layout_marginTop="@dimen/dp_30"
        n1:background="@drawable/btn_blue_shape"
        n1:text="@string/login_btn"
        n1:textColor="@color/white"
        n1:textSize="@dimen/sp_14"
        n5:layout_constraintLeft_toLeftOf="parent"
        n5:layout_constraintRight_toRightOf="parent"
        n5:layout_constraintTop_toBottomOf="@id/login_password" />

    <TextView xmlns:n6="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/login_go_updatepassword"
        n1:layout_width="wrap_content"
        n1:layout_height="wrap_content"
        n1:layout_marginTop="@dimen/dp_20"
        n1:text="@string/login_rpwd"
        n1:textColor="@color/gray1"
        n1:textSize="@dimen/sp_14"
        n6:layout_constraintRight_toRightOf="@id/login_login"
        n6:layout_constraintTop_toBottomOf="@id/login_login" />

    <TextView xmlns:n7="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/login_go_register"
        n1:layout_width="wrap_content"
        n1:layout_height="wrap_content"
        n1:layout_marginTop="@dimen/dp_20"
        n1:text="@string/login_regist"
        n1:textColor="@color/gray1"
        n1:textSize="@dimen/sp_14"
        n7:layout_constraintLeft_toLeftOf="@id/login_login"
        n7:layout_constraintTop_toBottomOf="@id/login_login" />

    <LinearLayout
        n1:orientation="horizontal"
        n1:id="@+id/ll_login_other"
        n1:layout_width="wrap_content"
        n1:layout_height="wrap_content"
        n1:layout_marginBottom="@dimen/dp_20"
        n8:layout_constraintBottom_toBottomOf="parent"
        n8:layout_constraintLeft_toLeftOf="parent"
        n8:layout_constraintRight_toRightOf="parent"
        xmlns:n8="http://schemas.android.com/apk/res-auto">

        <ImageView
            n1:id="@+id/login_qq_login"
            n1:layout_width="@dimen/dp_30"
            n1:layout_height="@dimen/dp_30"
            n1:layout_marginRight="@dimen/dp_20"
            n1:src="@drawable/login_qq" />

        <ImageView
            n1:id="@+id/login_wecat_login"
            n1:layout_width="@dimen/dp_30"
            n1:layout_height="@dimen/dp_30"
            n1:layout_marginRight="@dimen/dp_20"
            n1:src="@drawable/login_wecat" />

        <ImageView
            n1:id="@+id/login_webo_login"
            n1:layout_width="@dimen/dp_30"
            n1:layout_height="@dimen/dp_30"
            n1:src="@drawable/login_webo" />

    </LinearLayout>
    <View n1:background="@color/gray0"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/dp_1"
        n1:layout_marginLeft="@dimen/dp_80"
        n1:layout_marginRight="@dimen/dp_80"
        n1:layout_marginBottom="@dimen/dp_10"
        n9:layout_constraintBottom_toTopOf="@id/ll_login_other"
        n9:layout_constraintLeft_toLeftOf="parent"
        n9:layout_constraintRight_toRightOf="parent"
        xmlns:n9="http://schemas.android.com/apk/res-auto" />

    <TextView xmlns:n10="http://schemas.android.com/apk/res-auto"
        n1:id="@+id/login_other_login"
        n1:layout_width="wrap_content"
        n1:layout_height="wrap_content"
        n1:layout_marginBottom="@dimen/dp_30"
        n1:text="@string/login_by_other"
        n1:textSize="@dimen/sp_14"
        n10:layout_constraintBottom_toTopOf="@id/ll_login_other"
        n10:layout_constraintLeft_toLeftOf="parent"
        n10:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>