<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    n1:orientation="vertical"
    n1:background="#86000000"
    n1:layout_width="fill_parent"
    n1:layout_height="fill_parent"
    xmlns:n1="http://schemas.android.com/apk/res/android">

    <FrameLayout
        n1:id="@+id/fl_tag"
        n1:layout_width="fill_parent"
        n1:layout_height="@dimen/dp_0"
        n1:layout_weight="1.0" />

    <LinearLayout
        n1:layout_gravity="bottom"
        n1:orientation="vertical"
        n1:background="@color/white"
        n1:layout_width="fill_parent"
        n1:layout_height="wrap_content">

        <TextView
            n1:textSize="@dimen/sp_16"
            n1:gravity="center"
            n1:id="@id/popmine_tv_capture"
            n1:padding="@dimen/dp_10"
            n1:layout_width="fill_parent"
            n1:layout_height="wrap_content"
            n1:text="@string/mine_fragment_capture" />

        <View
            n1:id="@+id/view_line"
            n1:background="@color/gray0"
            n1:layout_width="fill_parent"
            n1:layout_height="@dimen/dp_1"
            n2:layout_constraintTop_toBottomOf="@id/popmine_tv_capture"
            xmlns:n2="http://schemas.android.com/apk/res-auto" />

        <TextView
            n1:textSize="@dimen/sp_16"
            n1:gravity="center"
            n1:id="@id/popmine_tv_alarm"
            n1:padding="@dimen/dp_10"
            n1:layout_width="fill_parent"
            n1:layout_height="wrap_content"
            n1:text="@string/mine_fragment_alarm"
            n3:layout_constraintTop_toBottomOf="@id/view_line"
            xmlns:n3="http://schemas.android.com/apk/res-auto" />

        <View
            n1:id="@+id/view_gray"
            n1:background="@color/gray1"
            n1:layout_width="fill_parent"
            n1:layout_height="@dimen/dp_10"
            n4:layout_constraintTop_toBottomOf="@id/popmine_tv_alarm"
            xmlns:n4="http://schemas.android.com/apk/res-auto" />

        <TextView xmlns:n5="http://schemas.android.com/apk/res-auto"
            n1:id="@id/popmine_tv_cancel"
            n1:layout_width="fill_parent"
            n1:layout_height="wrap_content"
            n1:gravity="center"
            n1:paddingBottom="@dimen/dp_15"
            n1:paddingTop="@dimen/dp_15"
            n1:text="@string/cancel"
            n1:textSize="@dimen/sp_16"
            n5:layout_constraintTop_toBottomOf="@id/view_gray" />

    </LinearLayout>
</LinearLayout>